--- a/contracts/tic.tac.toe/CMakeLists.txt
+++ b/contracts/tic.tac.toe/CMakeLists.txt
@@ -1,8 +1,8 @@
-file(GLOB ABI_FILES "*.abi")
-configure_file("${ABI_FILES}" "${CMAKE_CURRENT_BINARY_DIR}" COPYONLY)
+cmake_minimum_required( VERSION 3.5 )
 
-add_wast_executable(TARGET tic_tac_toe
-  INCLUDE_FOLDERS "${STANDARD_INCLUDE_FOLDERS}"
-  LIBRARIES libc++ libc eosiolib
-  DESTINATION_FOLDER ${CMAKE_CURRENT_BINARY_DIR}
-)
+set(teos $ENV{EOSIO_CONTEXT_DIR}/teos/build/teos)
+add_custom_command(OUTPUT tic.tac.toe.abi COMMAND ${teos} generate abi ../)
+add_custom_command(OUTPUT tic.tac.toe.wast COMMAND ${teos} build contract ../)
+add_custom_target(abi ALL DEPENDS tic.tac.toe.abi)
+add_custom_target(wast ALL DEPENDS tic.tac.toe.wast)
+
