--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,7 @@ eosc/eosc_visual_studio/eoscLib.pdb
 *.lib
 eos_libraries/visual_studio/test.exp
 __pycache__
-pyteos/doscs/Makefile
+pyteos/docs/Makefile
+pyteos/docs/.themes
 
 *.pyc
