history_api_plugin

--- a/resources/config.ini
+++ b/resources/config.ini
@@ -145,4 +145,4 @@ plugin = eosio::wallet_api_plugin
 plugin = eosio::chain_api_plugin
 plugin = eosio::http_plugin
 # This will be used by the validation step below, to view account history
-plugin = eosio::account_history_api_plugin
+plugin = eosio::history_api_plugin
