--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -71,14 +71,14 @@
         "type": "cppdbg",
         "request": "launch",
         "program": "/mnt/c/Workspaces/EOS/eosfactory/teos/build/teos",
-        "args": ["build", "contract", "C:\\\\Workspaces\\\\EOS\\\\eosfactory\\\\contracts\\\\hello"],
+        "args": ["build", "contract", "C:\\\\Workspaces\\\\EOS\\\\eosfactory\\\\contracts\\\\hello.test3"],
         "stopAtEntry": false,
         "cwd": "/mnt/c/Workspaces/EOS/eosfactory/teos/build",
         "environment": [],
         "externalConsole": true,
         "pipeTransport": {
             "debuggerPath": "/usr/bin/gdb",
-            "pipeProgram": "c:/Workspaces/EOS/bash.exe", 
+            "pipeProgram": "C:/Windows/sysnative/bash.exe", 
             "pipeArgs": ["-c"],
             "pipeCwd": ""
         },  
