--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,6 +5,37 @@
   "version": "0.2.0",
   "configurations": [  
     {
+        "name": "(gdb) wsl teos get config",
+        "type": "cppdbg",
+        "request": "launch",
+        "program": "/mnt/c/Workspaces/EOS/eosfactory/teos/build/teos",
+        "args": ["get", "config"],
+        "stopAtEntry": false,
+        "cwd": "/mnt/c/Workspaces/EOS/eosfactory/teos/build",
+        "environment": [],
+        "externalConsole": true,
+        "pipeTransport": {
+            "debuggerPath": "/usr/bin/gdb",
+            "pipeProgram": "C:/Windows/sysnative/bash.exe", 
+            "pipeArgs": ["-c"],
+            "pipeCwd": ""
+        },  
+        "windows": {
+            "MIMode": "gdb",
+            "setupCommands": [
+            {
+                "description": "Enable pretty-printing for gdb",
+                "text": "-enable-pretty-printing",
+                "ignoreFailures": true
+            }
+            ]
+        },
+        "sourceFileMap": 
+        {
+            "/mnt/c": "c:\\"
+        }         
+    },      
+    {
         "name": "(gdb) wsl teos bootstrap contract",
         "type": "cppdbg",
         "request": "launch",
@@ -16,7 +47,7 @@
         "externalConsole": true,
         "pipeTransport": {
             "debuggerPath": "/usr/bin/gdb",
-            "pipeProgram": "c:/Workspaces/EOS/bash.exe", 
+            "pipeProgram": "C:/Windows/sysnative/bash.exe", 
             "pipeArgs": ["-c"],
             "pipeCwd": ""
         },  
@@ -47,7 +78,7 @@
         "externalConsole": true,
         "pipeTransport": {
             "debuggerPath": "/usr/bin/gdb",
-            "pipeProgram": "c:/Workspaces/EOS/bash.exe", 
+            "pipeProgram": "C:/Windows/sysnative/bash.exe", 
             "pipeArgs": ["-c"],
             "pipeCwd": ""
         },  
@@ -109,7 +140,7 @@
         "externalConsole": true,
         "pipeTransport": {
             "debuggerPath": "/usr/bin/gdb",
-            "pipeProgram": "c:/Workspaces/EOS/bash.exe", 
+            "pipeProgram": "C:/Windows/sysnative/bash.exe", 
             "pipeArgs": ["-c"],
             "pipeCwd": ""
         },  
@@ -140,7 +171,7 @@
         "externalConsole": true,
         "pipeTransport": {
             "debuggerPath": "/usr/bin/gdb",
-            "pipeProgram": "c:/Workspaces/EOS/bash.exe", 
+            "pipeProgram": "C:/Windows/sysnative/bash.exe", 
             "pipeArgs": ["-c"],
             "pipeCwd": ""
         },  
@@ -171,7 +202,7 @@
         "externalConsole": true,
         "pipeTransport": {
             "debuggerPath": "/usr/bin/gdb",
-            "pipeProgram": "c:/Workspaces/EOS/bash.exe", 
+            "pipeProgram": "C:/Windows/sysnative/bash.exe", 
             "pipeArgs": ["-c"],
             "pipeCwd": ""
         },  
@@ -202,7 +233,7 @@
         "externalConsole": true,
         "pipeTransport": {
             "debuggerPath": "/usr/bin/gdb",
-            "pipeProgram": "c:/Workspaces/EOS/bash.exe", 
+            "pipeProgram": "C:/Windows/sysnative/bash.exe", 
             "pipeArgs": ["-c"],
             "pipeCwd": ""
         },  
@@ -233,7 +264,7 @@
         "externalConsole": true,
         "pipeTransport": {
             "debuggerPath": "/usr/bin/gdb",
-            "pipeProgram": "c:/Workspaces/EOS/bash.exe", 
+            "pipeProgram": "C:/Windows/sysnative/bash.exe", 
             "pipeArgs": ["-c"],
             "pipeCwd": ""
         },  
@@ -264,7 +295,7 @@
         "externalConsole": true,
         "pipeTransport": {
             "debuggerPath": "/usr/bin/gdb",
-            "pipeProgram": "c:/Workspaces/EOS/bash.exe", 
+            "pipeProgram": "C:/Windows/sysnative/bash.exe", 
             "pipeArgs": ["-c"],
             "pipeCwd": ""
         },  
@@ -295,7 +326,7 @@
         "externalConsole": true,
         "pipeTransport": {
             "debuggerPath": "/usr/bin/gdb",
-            "pipeProgram": "c:/Workspaces/EOS/bash.exe", 
+            "pipeProgram": "C:/Windows/sysnative/bash.exe", 
             "pipeArgs": ["-c"],
             "pipeCwd": ""
         },  
