custon contract workspace

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,10 +8,10 @@
         "name": "(gdb) wsl teos get config",
         "type": "cppdbg",
         "request": "launch",
-        "program": "/mnt/c/Workspaces/EOS/eosfactory/teos/build/teos",
+        "program": "/mnt/c/Workspaces/EOS/eosfactory/teos/teos/build/teos",
         "args": ["get", "config"],
         "stopAtEntry": false,
-        "cwd": "/mnt/c/Workspaces/EOS/eosfactory/teos/build",
+        "cwd": "/mnt/c/Workspaces/EOS/eosfactory/teos/teos/build",
         "environment": [],
         "externalConsole": true,
         "pipeTransport": {
@@ -39,10 +39,10 @@
         "name": "(gdb) wsl teos bootstrap contract",
         "type": "cppdbg",
         "request": "launch",
-        "program": "/mnt/c/Workspaces/EOS/eosfactory/teos/build/teos",
+        "program": "/mnt/c/Workspaces/EOS/eosfactory/teos/teos/build/teos",
         "args": ["bootstrap", "contract", "test"],
         "stopAtEntry": false,
-        "cwd": "/mnt/c/Workspaces/EOS/eosfactory/teos/build",
+        "cwd": "/mnt/c/Workspaces/EOS/eosfactory/teos/teos/build",
         "environment": [],
         "externalConsole": true,
         "pipeTransport": {
@@ -70,10 +70,10 @@
         "name": "(gdb) wsl teos generate abi",
         "type": "cppdbg",
         "request": "launch",
-        "program": "/mnt/c/Workspaces/EOS/eosfactory/teos/build/teos",
+        "program": "/mnt/c/Workspaces/EOS/eosfactory/teos/teos/build/teos",
         "args": ["generate", "abi", "C:\\\\Workspaces\\\\EOS\\\\eosfactory\\\\contracts\\\\hello"],
         "stopAtEntry": false,
-        "cwd": "/mnt/c/Workspaces/EOS/eosfactory/teos/build",
+        "cwd": "/mnt/c/Workspaces/EOS/eosfactory/teos/teos/build",
         "environment": [],
         "externalConsole": true,
         "pipeTransport": {
@@ -101,10 +101,10 @@
         "name": "(gdb) wsl teos build contract",
         "type": "cppdbg",
         "request": "launch",
-        "program": "/mnt/c/Workspaces/EOS/eosfactory/teos/build/teos",
-        "args": ["build", "contract", "C:\\\\Workspaces\\\\EOS\\\\eosfactory\\\\contracts\\\\hello.test3"],
+        "program": "/mnt/c/Workspaces/EOS/eosfactory/teos/teos/build/teos",
+        "args": ["build", "contract", "C:\\\\Workspaces\\\\EOS\\\\eosfactory\\\\contracts\\\\hello"],
         "stopAtEntry": false,
-        "cwd": "/mnt/c/Workspaces/EOS/eosfactory/teos/build",
+        "cwd": "/mnt/c/Workspaces/EOS/eosfactory/teos/teos/build",
         "environment": [],
         "externalConsole": true,
         "pipeTransport": {
@@ -132,10 +132,10 @@
         "name": "(gdb) wsl teos set contract",
         "type": "cppdbg",
         "request": "launch",
-        "program": "/mnt/c/Workspaces/EOS/eosfactory/teos/build/teos",
-        "args": ["set", "contract", "eosio", "currency", "-p", "eosio"],
+        "program": "/mnt/c/Workspaces/EOS/eosfactory/teos/teos/build/teos",
+        "args": ["set", "contract", "eosio.bios", "eosio.bios"],
         "stopAtEntry": false,
-        "cwd": "/mnt/c/Workspaces/EOS/eosfactory/teos/build",
+        "cwd": "/mnt/c/Workspaces/EOS/eosfactory/teos/teos/build",
         "environment": [],
         "externalConsole": true,
         "pipeTransport": {
@@ -163,10 +163,10 @@
         "name": "(gdb) wsl teos wallet keys",
         "type": "cppdbg",
         "request": "launch",
-        "program": "/mnt/c/Workspaces/EOS/eosfactory/teos/build/teos",
+        "program": "/mnt/c/Workspaces/EOS/eosfactory/teos/teos/build/teos",
         "args": ["wallet", "keys"],
         "stopAtEntry": false,
-        "cwd": "/mnt/c/Workspaces/EOS/eosfactory/teos/build",
+        "cwd": "/mnt/c/Workspaces/EOS/eosfactory/teos/teos/build",
         "environment": [],
         "externalConsole": true,
         "pipeTransport": {
@@ -256,10 +256,10 @@
         "name": "(gdb) wsl create account",
         "type": "cppdbg",
         "request": "launch",
-        "program": "/mnt/c/Workspaces/EOS/eosfactory/teos/build/teos",
+        "program": "/mnt/c/Workspaces/EOS/eosfactory/teos/teos/build/teos",
         "args": ["create", "account", "eosio", "currency", "EOS6piC619kadGT5wgp5YPHPkq6NyCrEGRqmTFx18HpEL4u5xShz5", "EOS7nsJFovJjQFsJKAytVPC1HDYCfHVrhUCp39KTWjPQ8mAjsHLXe"],
         "stopAtEntry": false,
-        "cwd": "/mnt/c/Workspaces/EOS/eosfactory/teos/build",
+        "cwd": "/mnt/c/Workspaces/EOS/eosfactory/teos/teos/build",
         "environment": [],
         "externalConsole": true,
         "pipeTransport": {
@@ -287,10 +287,10 @@
         "name": "(gdb) wsl daemon start",
         "type": "cppdbg",
         "request": "launch",
-        "program": "/mnt/c/Workspaces/EOS/eosfactory/teos/build/teos",
+        "program": "/mnt/c/Workspaces/EOS/eosfactory/teos/teos/build/teos",
         "args": ["daemon", "start"],
         "stopAtEntry": false,
-        "cwd": "/mnt/c/Workspaces/EOS/eosfactory/teos/build",
+        "cwd": "/mnt/c/Workspaces/EOS/eosfactory/teos/teos/build",
         "environment": [],
         "externalConsole": true,
         "pipeTransport": {
@@ -318,10 +318,10 @@
         "name": "(gdb) wsl daemon delete_walets",
         "type": "cppdbg",
         "request": "launch",
-        "program": "/mnt/c/Workspaces/EOS/eosfactory/teos/build/teos",
+        "program": "/mnt/c/Workspaces/EOS/eosfactory/teos/teos/build/teos",
         "args": ["daemon", "delete_wallets"],
         "stopAtEntry": false,
-        "cwd": "/mnt/c/Workspaces/EOS/eosfactory/teos/build",
+        "cwd": "/mnt/c/Workspaces/EOS/eosfactory/teos/teos/build",
         "environment": [],
         "externalConsole": true,
         "pipeTransport": {
