--- a/templates/contracts/skeleton/.vscode/tasks.json
+++ b/templates/contracts/skeleton/.vscode/tasks.json
@@ -7,13 +7,13 @@
          "label": "compile",
          "type": "shell",
          "windows": {
-             "command": "${env:EOSIO_TEOS} build contract ${env:EOSIO_CONTRACT_WORKSPACE}/hello.teos -c"
+             "command": "${env:EOSIO_TEOS} build contract ${env:EOSIO_CONTRACT_WORKSPACE}/@skeleton@ -c"
          },
          "osx": {
-             "command": "source $HOME/.bash_profile; ${EOSIO_TEOS} build contract ${EOSIO_CONTRACT_WORKSPACE}/hello.teos -c"
+             "command": "source $HOME/.bash_profile; ${EOSIO_TEOS} build contract ${EOSIO_CONTRACT_WORKSPACE}/@skeleton@ -c"
          },
          "linux": {
-             "command": "source $HOME/.bash_profile; ${EOSIO_TEOS} build contract ${EOSIO_CONTRACT_WORKSPACE}/hello.teos -c"
+             "command": "source $HOME/.bash_profile; ${EOSIO_TEOS} build contract ${EOSIO_CONTRACT_WORKSPACE}/@skeleton@ -c"
          },        
          "presentation": {
              "reveal": "always",
@@ -25,13 +25,13 @@
          "label": "build",
          "type": "shell",
          "windows": {
-             "command": "${env:EOSIO_TEOS} generate abi ${env:EOSIO_CONTRACT_WORKSPACE}/hello.teos;${env:EOSIO_TEOS} build contract ${env:EOSIO_CONTRACT_WORKSPACE}/hello.teos",
+             "command": "${env:EOSIO_TEOS} generate abi ${env:EOSIO_CONTRACT_WORKSPACE}/@skeleton@;${env:EOSIO_TEOS} build contract ${env:EOSIO_CONTRACT_WORKSPACE}/@skeleton@",
          },
          "osx": {
-             "command": "source $HOME/.bash_profile; ${EOSIO_TEOS} generate abi ${EOSIO_CONTRACT_WORKSPACE}/hello.teos;${EOSIO_TEOS} build contract ${EOSIO_CONTRACT_WORKSPACE}/hello.teos",
+             "command": "source $HOME/.bash_profile; ${EOSIO_TEOS} generate abi ${EOSIO_CONTRACT_WORKSPACE}/@skeleton@;${EOSIO_TEOS} build contract ${EOSIO_CONTRACT_WORKSPACE}/@skeleton@",
          },
          "linux": {
-             "command": "source $HOME/.bash_profile; ${EOSIO_TEOS} generate abi ${EOSIO_CONTRACT_WORKSPACE}/hello.teos;${EOSIO_TEOS} build contract ${EOSIO_CONTRACT_WORKSPACE}/hello.teos",
+             "command": "source $HOME/.bash_profile; ${EOSIO_TEOS} generate abi ${EOSIO_CONTRACT_WORKSPACE}/@skeleton@;${EOSIO_TEOS} build contract ${EOSIO_CONTRACT_WORKSPACE}/@skeleton@",
          },                
          "problemMatcher": [],
          "presentation": {
