--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -102,7 +102,7 @@
         "type": "cppdbg",
         "request": "launch",
         "program": "/mnt/c/Workspaces/EOS/eosfactory/teos/build/teos/teos",
-        "args": ["generate", "abi", "test"],
+        "args": ["generate", "abi", "hello.teos"],
         "stopAtEntry": false,
         "cwd": "/mnt/c/Workspaces/EOS/eosfactory/teos/build/teos",
         "environment": [],
